2013-12-04  Kirit Saelensminde  <kirit@felspar.com>
 Allow the removal of built-in operations from models and also changes to the URIs they are mounted at.
 Make HTML the default for browsers rather than XML.

2013-12-03  Kirit Saelensminde  <kirit@felspar.com>
 Allow operations to be mounted at any URL below the Slumber mount point.

2013-11-26  Kirit Saelensminde  <kirit@felspar.com>
 Changed the way that the URLs are configured to be compatible with Django 1.6.
 Other changes for Django 1.6 compatibility.

2013-11-25  Siraset Jirapatchandej  <siraset@proteus-tech.com>
 Merge html response handler from nattakit
 Merge xml response handler chirapat

2013-11-20  Chirapat Harigulrak  <chirapat@proteus-tech.com>
  Create xml response handler

2013-11-12  Kirit Saelensminde  <kirit@felspar.com>
 Django applicatoins that are imported on the server side are now able to take a configuration that appears when the service URL is fetched.

2013-10-31  Kirit Saelensminde  <kirit@felspar.com>
 Allow checking if the user making a request has a given permission.

2013-10-28  Kirit Saelensminde  <kirit@felspar.com>
 Allow us to set up a POST expectation, but not test on the post data itself by setting the expected data to None.

2013-09-24  Kirit Saelensminde  <kirit@felspar.com>
 The decorator `slumber.connector.ua.for_user` now copies the wrapped function name so that it can be used for tests etc. where the original function name is still needed.

2013-09-18  Chirapat Harigulrak  <chirapat@proteus-tech.com>
 Make the create operation work for models who don't have a primary key of a numeric sequence.

2013-07-11  Kirit Saelensminde  <kirit@felspar.com>
 UTF-7 encode the user name in the Authorization header and in the X-FOST-User header.
 Allow for Unicode data in user names and passwords when remote authenticating.

2013-06-04  Kirit Saelensminde  <kirit@felspar.com>
 Fixed up some NULL handling problems for the database fields on RemoteForeignKey thanks to Jsaytoe.
